Update reply section